// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rollup > auto add exts 1`] = `
"// main.js
function Component() {
  return /* @__PURE__ */ React.createElement("div", null, "I'm a div in a tsx component!");
}

function hello(s) {
  return "hello" + s;
}
let c = Component;
let num = 1;

export { c, hello, num };

// temp/component.d.ts
export declare function Component(): React.JSX.Element;

// temp/main.d.ts
import { type Num } from '../temp/types.js';
export type Str = string;
export declare function hello(s: Str): Str;
export declare let c: React.JSX.Element;
export declare let num: Num;

// temp/types.d.ts
import type { Num2 } from '../temp/types2.js';
export type Num = Num2;

// temp/types2.d.ts
export type Num2 = number;
"
`;

exports[`rollup > custom rewriter 1`] = `
"// index.d.ts
export type * from './test.js';

// index.js


// test.d.ts
export type Str = string;
"
`;

exports[`rollup > don't add exts, but keep 1`] = `
"// main.d.ts
export type {} from './types.js';
export type {} from './types.js';
export type {} from './tsx.js';
export type {} from './tsx.jsx';
export type {} from './tsx.js';
export type {} from './tsx.jsx';

// main.js


// tsx.d.ts
export type A = string;

// types.d.ts
export type Str = string;
"
`;

exports[`rollup > generate basic 1`] = `
"// main.js
function Component() {
  return /* @__PURE__ */ React.createElement("div", null, "I'm a div in a tsx component!");
}

function hello(s) {
  return "hello" + s;
}
let c = Component;
let num = 1;

export { c, hello, num };

// temp/component.d.ts
export declare function Component(): React.JSX.Element;

// temp/main.d.ts
import { type Num } from '../temp/types';
export type Str = string;
export declare function hello(s: Str): Str;
export declare let c: React.JSX.Element;
export declare let num: Num;

// temp/types.d.ts
import type { Num2 } from '../temp/types2';
export type Num = Num2;

// temp/types2.d.ts
export type Num2 = number;
"
`;
